@startuml data-model-overview

database drugstore {

  entity Unit {
    * unitId : number <<generated>>
    --
    * title : varchar
  }

  entity DrugType {
    * drugTypeId : number <<generated>>
    --
    parentDrugTypeId : number <<FK>>
    --
    * title : varchar
  }


  entity Substance {
    * substanceId : number <<generated>>
    --
    * title : varchar
  }

  entity Drug {
    * drugId : number <<generated>>
    --
    * substanceId : number <<FK>>
    * drugTypeId : number <<FK>>
    * unitId : number <<FK>>
    --
    * title : varchar
    dosage : varchar
    isFavorite : boolean
    tolerance : double
    stockAmount : double
  }

  entity Transaction {
    * transactionId : number <<generated>>
    --
    * drugId : number <<FK>>
    * userId : number <<FK>>
    --
    * patient : varchar
    * amount : double
    * createdAt : timestamp
  }

  entity Signature {
    * signatureId : number <<generated>>
    --
    * userId : number <<FK>>
    --
    * createdAt : timestamp
  }

  ' Need a better name for this one
  ' Items at stock when signature is created
  entity SignatureDrug {
    * ID_signatureId : number <<FK>>
    * ID_drugId : number <<FK>>
    --
    * expectedAmount : double
    * actualAmount: double
    * approved: boolean
  }

  entity User {
    * userId : number
    --
    * shortName : varchar
    firstName : varchar
    lastName : varchar
    emailAddress : varchar
    externalId : varchar
  }

}


' One Drug has one Unit
' One Unit has zero or many DrugTypes
Drug }o..|| Unit

' One Drug has zero or one Substance
' One Substance has zero or many Drugs
Substance ||..o{ Drug

' One Drug has one DrugType
' One DrugType can occur in zero or many Drugs
Drug }o..|| DrugType

' One Drug can be in zero or many transactions
' One Transaction has one Drug
Drug }o..|| Transaction

' One User can have zero or many transactions
' One Transaction has one User
User ||..o{ Transaction

' One User as zero or many Signatures
' One Signaure has one User
User ||..o{ Signature

' One Signature has one or many SignatureDrug
' One SigantureDrug has one Signature
Signature ||...|{ SignatureDrug

' One Drug has zero or many SignatureDrug
' One SignatureDrug has one Drug
Drug ||..|{ SignatureDrug

@enduml